<resources>
    <string name="app_name">CalorieCounterApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="monday">Monday</string>
    <string name="sample_date">6/17/2024</string>
    <string name="meal_name">Breakfast</string>
    <string name="meal_description">Two eggs and toast</string>
    <string name="label_calories">Calories:</string>
    <string name="calorie_count">300</string>
    <string name="my_meal_label">My Meal</string>
    <string name="meal_prompt">Describe your food or drink or take photo</string>
    <string name="total_calories">Total Calories: </string>

    <string-array name="meal_names_array">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>
</resources>