<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.antondeveloper.caloriecounterapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_add_meal"
            app:destination="@id/nav_add_meal" />
        <action
            android:id="@+id/action_nav_home_to_permissionsFragment"
            app:destination="@id/permissionsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.antondeveloper.caloriecounterapp.ui.Calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.antondeveloper.caloriecounterapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_add_meal"
        android:name="com.antondeveloper.caloriecounterapp.ui.addmeal.AddMealFragment"
        android:label=""
        tools:layout="@layout/fragment_add_meal" >
        <action
            android:id="@+id/action_nav_add_meal_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/save_meal"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/permissionsFragment"
        android:name="com.antondeveloper.caloriecounterapp.ui.photo.PermissionsFragment"
        android:label="PermissionsFragment" >
        <action
            android:id="@+id/action_permissionsFragment_to_nav_slideshow"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>